# BinahBot

./: .gitignore  .gitmodules  README.md
rust/: Cargo.toml
rust/binah_bot/: .gitignore  Cargo.toml
rust/binah_bot/binah_bot_spoiler/: Cargo.toml  README.md
rust/binah_bot/binah_bot_spoiler/src/: channel_config.toml.example  lib.rs
rust/binah_bot/locales/en-US/: deck.ftl  lc.ftl  lor.ftl  main.ftl
rust/binah_bot/locales/ja/: deck.ftl  lor.ftl  main.ftl  rollcalc.ftl
rust/binah_bot/locales/ko/: CREDITS  deck.ftl  lc.ftl  lor.ftl  main.ftl  rollcalc.ftl
rust/binah_bot/locales/zh-CN/: lor.ftl  main.ftl  rollcalc.ftl
rust/binah_bot/locales/zh-TW/: lor.ftl  main.ftl  rollcalc.ftl
rust/binah_bot/src/: about_command.rs  ddb.rs  ddb_accessor.rs  deck.rs  discord.rs  lc.rs  lor.rs  lor_autocomplete.rs  lor_command.rs  macros.rs  main.rs  models.rs  rollcalc_command.rs  router.rs  secrets.rs  secrets_accessor.rs  thumbnail.rs  tiph.rs  utils.rs
rust/binah_bot/src/deck/: create_deck.rs  deck_utils.rs  delete_deck.rs  list_deck.rs  read_deck.rs  update_deck.rs
rust/binah_bot/src/lc/: autocomplete.rs  button.rs  command.rs  transformers.rs
rust/binah_bot/src/lor/: autocomplete.rs  command.rs  lookup.rs  transformers.rs
rust/binah_bot/src/lor_autocomplete/: lookup.rs  main.rs
rust/binah_bot/src/lor_command/: main.rs  transformers.rs
rust/binah_bot/src/models/: binahbot.rs  deck.rs  discord.rs
rust/index_analyzer/: Cargo.toml
rust/index_analyzer/src/: filters.rs  lib.rs
rust/lobocorp/: Cargo.toml
rust/lobocorp/lobocorp_common/: Cargo.toml
rust/lobocorp/lobocorp_common/src/: game_objects.rs  lib.rs  localizations.rs
rust/lobocorp/lobocorp_common/src/game_objects/: abnormality.rs  common.rs  equipment.rs
rust/lobocorp/lobocorp_common/src/localizations/: abnormality.rs  common.rs  equipment.rs
rust/lobocorp/lobocorp_index/: Cargo.toml
rust/lobocorp/lobocorp_index/.cargo/: config.toml
rust/lobocorp/lobocorp_index/lobocorp_index_builder/: Cargo.toml
rust/lobocorp/lobocorp_index/lobocorp_index_builder/src/: lib.rs
rust/lobocorp/lobocorp_index/src/: lib.rs
rust/lobocorp/lobocorp_reparser/: Cargo.toml
rust/lobocorp/lobocorp_reparser/.cargo/: config.toml
rust/lobocorp/lobocorp_reparser/data/: BaseCreatureGen.xml  BaseEquipment.xml  BaseIsolate.xml  BaseList.xml  BaseMapGraph.xml
rust/lobocorp/lobocorp_reparser/data/BaseCreatures/: Alriune_stat.xml  AuthorNote_stat.xml  Baku_stat.xml  Bald_stat.xml  BeautyBeast_stat.xml  BigBadWolf_stat.xml  BigBird_stat.xml  BigEgg_stat.xml  BigTreeSap_stat.xml  BinahBoss_stat.xml  BlackSwan_stat.xml  BloodBath_stat.xml  BossGateWay_stat.xml  BugDawn_stat.xml  BugDusk_stat.xml  BugMidnight_stat.xml  Bunny_stat.xml  Butterfly_stat.xml  Censored_stat.xml  CircusDawn_stat.xml  CircusDusk_stat.xml  CircusNoon_stat.xml  DangoCreature_stat.xml  DeathAngel_stat.xml  DesireHeart_stat.xml  Fairy_stat.xml  FengYun_stat.xml  FireBird_stat.xml  FixerClaw_stat.xml  FixerPale_stat.xml  FixerRed_stat.xml  FixerWhite_stat.xml  GalaxyBoy_stat.xml  HappyTeddy_stat.xml  HealthBracelet_stat.xml  HellTrain_stat.xml  Helper_stat.xml  IronMaiden_stat.xml  JusticeReceiver_stat.xml  LadyLookingAtWall_stat.xml  (+50 more)
rust/lobocorp/lobocorp_reparser/data/Language/: AgentName.xml  ResearchDesc.xml
rust/lobocorp/lobocorp_reparser/data/StoryData/: Story_BinahStory.xml  Story_BossAngelaStory.xml  Story_HokmaStory.xml  Story_MainStory10.xml  Story_MainStory11.xml  Story_MainStory12.xml  Story_MainStory13.xml  Story_MainStory14.xml  Story_MainStory15.xml  Story_MainStory18.xml  Story_MainStory19.xml  Story_MainStory21.xml  Story_MainStory22.xml  Story_MainStory24.xml  Story_MainStory25.xml  Story_MainStory26.xml  Story_MainStory27.xml  Story_MainStory3.xml  (+40 more)
rust/lobocorp/lobocorp_reparser/lobocorp_reparser_build/: Cargo.toml
rust/lobocorp/lobocorp_reparser/src/: lib.rs
rust/lobocorp/src/: lib.rs
rust/ops_tools/: .gitignore  Cargo.toml
rust/ops_tools/src/: app.rs  ddb.rs  deck.rs  main.rs  thumbnail.rs  tiph.rs
rust/ruina/: Cargo.toml
rust/ruina/ruina_common/: Cargo.toml
rust/ruina/ruina_index/: Cargo.toml  README.md
rust/ruina/ruina_index/ruina_index_builder/: Cargo.toml
rust/ruina/ruina_index/src/: lib.rs  models.rs
rust/ruina/ruina_reparser/: Cargo.toml  README.md
rust/ruina/ruina_reparser/ruina_reparser_build/: Cargo.toml
rust/ruina/ruina_reparser/src/: lib.rs
rust/ruina/src/: lib.rs
rust/ruina_common/: Cargo.toml
rust/ruina_common/src/: game_objects.rs  localizations.rs
rust/ruina_common/src/game_objects/: abno_page.rs  battle_symbol.rs  book.rs  combat_page.rs  common.rs  key_page.rs  passive.rs
rust/ruina_common/src/localizations/: abno_page_locale.rs  battle_symbol_locale.rs  card_effect_locale.rs  combat_page_locale.rs  common.rs  key_page_locale.rs  passive_locale.rs
rust/ruina_index/: Cargo.toml
rust/ruina_index/ruina_identifier/: Cargo.toml
rust/ruina_index/ruina_identifier/src/: lib.rs
rust/ruina_index/ruina_index_analyzer/: Cargo.toml
rust/ruina_index/ruina_index_analyzer/src/: filters.rs  lib.rs  tokenizer.rs
rust/ruina_index/ruina_index_annotations/: Cargo.toml  README.md
rust/ruina_index/ruina_index_annotations/manual/: annotations.toml
rust/ruina_index/ruina_index_annotations/src/: lib.rs  manual_mappings.rs
rust/ruina_index/ruina_index_builder/: Cargo.toml  README.md  output.txt
rust/ruina_index/ruina_index_builder/data/: collectability.toml
rust/ruina_index/ruina_index_builder/src/: annotations.rs  autocomplete.rs  heuristics.rs  index.rs  lib.rs  name.rs  taggers.rs
rust/ruina_index/src/: lib.rs  models.rs
rust/ruina_reparser/: .gitignore  Cargo.toml  README.md
rust/ruina_reparser/.cargo/: config.toml
rust/ruina_reparser/ruina_reparser_build/: Cargo.toml
rust/ruina_reparser/ruina_reparser_build/data/: collectability.toml
rust/ruina_reparser/ruina_reparser_build/src/: game_objects.rs  lib.rs  localization.rs
rust/ruina_reparser/src/: lib.rs
rust/thumbnail/: .gitignore  Cargo.toml
rust/thumbnail/.cargo/: config.toml
rust/thumbnail/src/: main.rs  models.rs
(+3399 files in other folders)
