[workspace]
resolver = "2"

members = [
    "binah_bot",
    "index_analyzer",
    "ruina",
    "ruina/ruina_common",
    "ruina/ruina_index",
    "ruina/ruina_index/ruina_identifier",
    "ruina/ruina_index/ruina_index_builder",
    "ruina/ruina_reparser",
    "ruina/ruina_reparser/ruina_reparser_build",
    "thumbnail"
]
