[workspace]
resolver = "2"

members = [
    "binah_bot",
    "binah_bot/binah_bot_spoiler",
    "index_analyzer",
    "lobocorp",
    "lobocorp/lobocorp_common",
    "lobocorp/lobocorp_index",
    "lobocorp/lobocorp_index/lobocorp_index_builder",
    "lobocorp/lobocorp_reparser",
    "lobocorp/lobocorp_reparser/lobocorp_reparser_build",
    "ruina",
    "ruina/ruina_common",
    "ruina/ruina_index",
    "ruina/ruina_index/ruina_identifier",
    "ruina/ruina_index/ruina_index_builder",
    "ruina/ruina_reparser",
    "ruina/ruina_reparser/ruina_reparser_build",
    "thumbnail"
]
