[package]
name = "binah_bot"
version = "1.0.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.36.0"
aws-sdk-lambda = "1.34.0"
aws-sdk-secretsmanager = "1.22.0"
ed25519-dalek = "2.1.1"
fluent-templates = "0.9.4"
futures = "0.3"
hex = "0.4"
http = "1.1.0"
lambda_http = "0.11.1"
phf = { version = "0.11.2", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ruina = { path = "../ruina", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.38" }
tracing-subscriber = "0.3"
unic-langid = "0.9.5"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
