[package]
name = "lobocorp"
version = "1.0.0"
edition = "2021"

[dependencies]
lobocorp_common = { path = "./lobocorp_common", version = "1.0.0" }
index_analyzer = { path = "../index_analyzer", version = "1.0.0" }
lobocorp_index = { path = "./lobocorp_index", version = "1.0.0" }
lobocorp_reparser = { path = "./lobocorp_reparser", version = "1.0.0" }
