[package]
name = "thumbnail"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest", "sso"] }
aws-sdk-s3 = "1.38.0"
futures = "0.3"
http = "1.1.0"
image = "0.25.1"
lambda_runtime = "0.12.0"
ruina = { path = "../ruina", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.38" }
tracing-subscriber = "0.3"