[package]
name = "lobocorp_index"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
phf = { version = "0.11.2", default-features = false }
index_analyzer = { path = "../../index_analyzer", version = "1.0.0" }
lobocorp_common = { path = "../lobocorp_common", version = "1.0.0" }
lobocorp_reparser = { path = "../lobocorp_reparser", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.0"
strum_macros = "0.26.0"

[build-dependencies]
lobocorp_index_builder = { path = "lobocorp_index_builder" }