[package]
name = "lobocorp_reparser"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
lobocorp_common = { path = "../lobocorp_common", version = "1.0.0" }
phf = { version = "0.11.2", default-features = false }
strum = "0.26.0"

[build-dependencies]
lobocorp_reparser_build = { path = "./lobocorp_reparser_build", version = "1.0.0" }