[package]
name = "ruina_index"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
phf = { version = "0.11.2", default-features = false }
ruina_common = { path = "../ruina_common", version = "1.0.0" }
index_analyzer = { path = "../../index_analyzer", version = "1.0.0" }
ruina_reparser = { path = "../ruina_reparser", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.0"
strum_macros = "0.26.0"

[build-dependencies]
ruina_index_builder = { path = "ruina_index_builder" }
