[package]
name = "ruina_reparser"
version = "1.0.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
phf = { version = "0.11.2", default-features = false }
ruina_common = { path = "../ruina_common", version = "1.0.0" }
strum = "0.26.0"

[build-dependencies]
ruina_reparser_build = { path = "./ruina_reparser_build", version = "1.0.0" }