[package]
name = "ruina_identifier"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruina_common = { path = "../../ruina_common", version = "1.0.0" }
ruina_reparser = { path = "../../ruina_reparser", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.0"
