[package]
name = "ruina_reparser_build"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"
roxmltree = "0.19.0"
ruina_common = { path = "../../ruina_common", version = "1.0.0" }
rust-stemmers = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.0"
strum_macros = "0.26.0"
toml = "0.8.13"
