[package]
name = "lobocorp_reparser_build"
version = "1.0.0"
edition = "2021"

[dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"
roxmltree = "0.20.0"
lobocorp_common = { path = "../../lobocorp_common", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
strum = "0.26.0"
strum_macros = "0.26.0"
toml = "0.8.13"
